tests/rgs/valid/all_origins.rgs
STORY quest PRIORITY 1.
    ACTION a.
    EVENT env_event  ENVIRONMENT.
    EVENT dir_event  DIRECTOR.
    EVENT self_event MYSELF.
    EVENT play_event PLAYER.
    EVENT time_event TIMER.
    CONDITION env_cond  ENVIRONMENT.
    CONDITION dir_cond  DIRECTOR.
    CONDITION self_cond MYSELF.
    PHASE p1.
    AGENT Hero:
        DURING p1:
            WHEN env_event  ENVIRONMENT IF env_cond  ENVIRONMENT: DO a.
            WHEN dir_event  DIRECTOR    IF dir_cond  DIRECTOR:    DO a.
            WHEN self_event MYSELF      IF self_cond MYSELF:      DO a.
            WHEN play_event PLAYER:                               DO a.
            WHEN time_event TIMER:                                DO a.
