tests/rgs/syntax_errors/phase_missing_name.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    PHASE.
    AGENT Hero:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
